--- a/backup/关于.md
+++ b/backup/关于.md
@@ -6,5 +6,8 @@
 > * 个人比较喜欢coding，期间开过很多博客，也在掘金这类平台上发过帖子。
 > * 2024年7月13日再一次创建此博客，希望能坚持记录日常和工作的点点滴滴。
 > * 特别感谢meekdai提供的博客建设支持。 [meekdai](https://blog.meekdai.com/)
-> ❤️感谢第小伙伴的次访问关于页面。
+<span id="busuanzi">
+:heart:感谢第<span></span>小伙伴的<span></span>次访问关于页面。
+</span>
 
+<!-- ##{"script":"<script>document.getElementById('user-content-busuanzi').id='busuanzi_container_site_uv';busuanzi=document.getElementById('busuanzi_container_site_uv');busuanzi.style.display='none';busuanzi.childNodes[1].id='busuanzi_value_site_uv';busuanzi.childNodes[3].id='busuanzi_value_site_pv';</script><script async src='//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js'></script>","style":"<style>#busuanzi_value_site_uv{color:red}#busuanzi_value_site_pv{color:red}</style>"}## -->
