🎉auto update by Gmeek action

--- a/backup/关于.md
+++ b/backup/关于.md
@@ -7,7 +7,7 @@
 > * 2024年7月13日再一次创建此博客，希望能坚持记录日常和工作的点点滴滴。
 > * 特别感谢meekdai提供的博客建设支持。 [meekdai](https://blog.meekdai.com/)
 #### 欢迎关注我的个人公众号
-![qrcode_for_gh_554a10e3d22b_258](https://lq0910.github.io/wx.jpg)
+![qrcode_for_gh_554a10e3d22b_258](https://github.com/lq0910/lq0910.github.io/blob/main/static/wx.jpg)
 
 <span id="busuanzi">
 :heart:感谢第<span></span>小伙伴的<span></span>次访问关于页面。
